tests/ui/impl-trait/in-trait/doesnt-satisfy.stderr
error[E0277]: `()` doesn't implement `std::fmt::Display`
  --> $DIR/doesnt-satisfy.rs:6:17
   |
LL |     fn bar() -> () {}
   |                 ^^ `()` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `()`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `Foo::{anon_assoc#0}`
  --> $DIR/doesnt-satisfy.rs:2:22
   |
LL |     fn bar() -> impl std::fmt::Display;
   |                      ^^^^^^^^^^^^^^^^^ required by this bound in `Foo::{anon_assoc#0}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
